# churnsense

./: .gitignore  .vercelignore  ChurnModel.ipynb  MANIFEST.in  Procfile  README.md  TelecomChurn.xlsx  app.py  build.sh  copy.csv  pyproject.toml  render.yaml  requirements.txt  setup.py  vercel-build.sh  vercel.json  vercel_build.sh  wsgi.py
.ipynb_checkpoints/: ChurnEDA-checkpoint.ipynb  ChurnModel-checkpoint.ipynb
api/: index.py
static/: script.js  styles.css
templates/: index.html
